src/test/deca/codegen/valid/methode.deca
//
//
//
//
// 42

class A {
    int x = 42;

    int getX() {
        return x;
    }
}

{
    A a = new A();
    print(a.getX());
}